# django-app

./: .gitignore
prod/: .env  Dockerfile  docker-compose.yaml  pyproject.toml  requirements.txt
prod/mysite/: db.sqlite3
prod/mysite/database/: db.sqlite3
prod/mysite/mysite/: settings.py
prod/mysite/shopapp/: forms.py
