[tool.poetry]
name = "django-app-new"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]


[tool.poetry.dependencies]
python = "^3.11"
django = "4.2.0"
djangorestframework = "^3.14.0"
django-filter = "^23.3"
gunicorn = "^21.2.0"
pillow = "^10.0.1"
django-debug-toolbar = "^4.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
